Fix follow/unfollow button clipping into profile pictures

--- a/src/sass/profile/card.scss
+++ b/src/sass/profile/card.scss
@@ -126,8 +126,8 @@
     }
 
     .profile-card-avatar {
-        width: 80px;
-        height: 80px;
+        width: 98px;
+        height: auto;
 
         img {
             border-width: 2px;
